# universal-captcha-solver

./: .gitignore  LICENSE  README.md  pyproject.toml
src/captcha_solver/: __init__.py  __main__.py  config.py
src/captcha_solver/browser/: __init__.py  base.py  behavior.py  detection.py  playwright_adapter.py  selenium_adapter.py  stealth.py
src/captcha_solver/cli/: __init__.py  app.py
src/captcha_solver/core/: __init__.py  detector.py  pipeline.py  registry.py  result.py
src/captcha_solver/models/: __init__.py  backend.py  cloud_backend.py  manager.py  onnx_backend.py
src/captcha_solver/preprocessing/: __init__.py  audio.py  image.py
src/captcha_solver/server/: __init__.py  app.py  routes.py  schemas.py
src/captcha_solver/solvers/: __init__.py  audio.py  base.py  geetest.py  hcaptcha.py  math_solver.py  recaptcha_v2.py  recaptcha_v3.py  slider.py  text.py  turnstile.py
tests/: __init__.py  conftest.py  test_cli.py  test_cloud_backend.py  test_config.py  test_detector.py  test_pipeline.py  test_plugins.py  test_preprocessing.py  test_registry.py  test_result.py  test_server.py
tests/integration/: conftest.py  test_full_flow.py  test_normal_captcha.py  test_recaptcha.py  test_slider_captcha.py  test_text_captcha.py  test_turnstile.py
tests/test_browser/: test_adapters.py  test_behavior.py  test_detection.py  test_stealth.py
tests/test_solvers/: __init__.py  test_audio.py  test_geetest.py  test_math.py  test_recaptcha_v2.py  test_recaptcha_v3.py  test_slider.py  test_text.py  test_turnstile.py
